--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@testing-library/user-event": "^14.4.3",
     "eslint-plugin-jest": "^27.2.2",
     "jest": "^29.6.0",
-    "jest-environment-jsdom": "^29.6.0"
+    "jest-environment-jsdom": "^29.6.0",
+    "next-router-mock": "^0.9.12"
   },
   "description": "Next.js (incl. Styled Components and Jest)",
   "nf": {
